tests/programs/invalid/InvalidAbstractMethod.java
public final abstract class InvalidAbstractMethod {
    public abstract void abstractMethod() {
        // Invalid abstract method with a body
    }

    public abstract void anotherMethod() {

    }

    public InvalidAbstractMethod();

    public NonAbstractMethod();

    public abstract validAbstractMethod();

    int j = 0;
}
